
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/logo_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logo_heading"
            android:layout_alignParentRight="true"
            android:textAlignment="textEnd"
            android:textSize="30sp">
        </TextView>

        <ImageView
            android:id="@+id/logo_about"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/logo_heading"
            android:layout_centerHorizontal="true"
            android:background="@color/app_icon_background"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/app_icon_foreground"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
        </ImageView>

        <TextView
            android:id="@+id/text_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_about"
            android:layout_below="@id/logo_about"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginBottom="50dp">
        </TextView>

        <TextView
            android:id="@+id/copyright_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_about"
            android:layout_below="@id/text_about"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:layout_marginBottom="5dp">
        </TextView>

        <TextView
            android:id="@+id/link_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/copyright_about"
            android:layout_centerHorizontal="true"
            android:linksClickable="true"
            android:text="@string/link_about"
            android:textSize="15sp">
        </TextView>

    </RelativeLayout>
</ScrollView>